# claude-token-lens

./: .gitignore  CLAUDE.md  README.md  README_CN.md  cli.py  pyproject.toml  statusline.py
claude_token_lens/: __init__.py  advisor.py  cli.py  compressor.py  estimator.py  statusline.py  tracker.py
claude_token_lens/docs/: __init__.py  chunker.py  cleaner.py  extractor.py  summarizer.py  timeline.py
claude_token_lens/hooks/: user_prompt_submit.py
hooks/: pre_tool_use.py  user_prompt_submit.py
notes/: context.md  design.md  handover.md  roadmap.md
tests/: test_compressor.py  test_docs.py  test_hook.py
